# nstu-practice-spring-2026

./: allurerc.yaml  pyproject.toml
.github/workflows/: ci.yaml  pages.yaml
examples/: Lesson2.ipynb
students/bolshanin/: lesson2.py
students/degtyarev/: lesson2.py
students/gross/: lesson2.py
students/kayashev/: lesson2.py
students/kirienko/: lesson2.py
students/kiselev/: lesson2.py
students/kolozov/: lesson2.py
students/kudryavcev/: lesson2.ipynb  lesson2.py
students/kuzmin/: lesson2.py  notebook.ipynb
students/kuzneczov/: lesson2.py
students/marchenko/: lesson2.py
students/melidi/: lesson2.py
students/miller/: lesson2.py
students/naumov/: lesson1.py  lesson2.py
students/panteeva/: lesson1.py  lesson2.py
students/pridatchenko/: lesson2.py
students/razin/: iris_hyperparameters.ipynb  lesson2.py
students/romanova/: lesson2.py
students/saakyan/: lesson2.py
students/staronedov/: lesson2.py
students/tokmakov/: blocknote.ipynb  lesson1.py  lesson2.py
students/vorobev/: lesson2.py
tests/: conftest.py  test_lesson1.py  test_lesson2.py
