[project]
name = "nstu-practice-spring-2026"
version = "0.1.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "allure-pytest>=2.15.3",
    "ipykernel<7",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "nbstripout>=0.9.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
    "ty>=0.0.18",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

[tool.pytest]
strict = true
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
